[gd_scene load_steps=6 format=2]

[ext_resource path="res://UI/ItemButton/ItemButton.gd" type="Script" id=1]
[ext_resource path="res://Items/Active/Tack/tack_item1.png" type="Texture" id=2]
[ext_resource path="res://Items/Active/Gum/gum_item1.png" type="Texture" id=3]
[ext_resource path="res://UI/itembutton2.png" type="Texture" id=4]
[ext_resource path="res://UI/ItemButton/ib_background.png" type="Texture" id=5]

[node name="ItemButton" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="tack_image" type="Sprite" parent="."]
visible = false
position = Vector2( 392.406, 167.187 )
z_index = 10
texture = ExtResource( 2 )

[node name="gum_image" type="Sprite" parent="."]
visible = false
position = Vector2( 392.406, 167.187 )
z_index = 10
texture = ExtResource( 3 )

[node name="Start_image" type="Sprite" parent="."]
position = Vector2( 391.431, 174.502 )
scale = Vector2( 0.15, 0.15 )
z_index = 9
texture = ExtResource( 4 )

[node name="Start_image2" type="Sprite" parent="."]
position = Vector2( 390.456, 169.137 )
scale = Vector2( 0.240202, 0.239555 )
z_index = 8
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="."]
margin_left = 381.414
margin_top = 154.877
margin_right = 403.414
margin_bottom = 177.877
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
